<resources>
    <string name="app_name">Password Authentication 2</string>
    <string name="button_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_pw">Password</string>
    <string name="prompt_verify_pw">Verify password</string>
    <string name="info_signup">Tap here to\ncreate an account.</string>
    <string name="prompt_display_name">First and last name</string>
    <string name="button_register">Register</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_login">Login</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_view_profile">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="title_main_activity">Main Activity</string>
    <string name="title_login_ep">Log In with Email</string>
    <string name="title_sign_up_email">Sign Up with Email</string>
    <string name="label_profile">My Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login_option_email">Using email</string>
    <string name="login_options">Log In</string>
    <string name="signup_options">Create an Account</string>
    <string name="signup_option_email">Using email</string>

    <string name="web_client_id">943920619376-3k62skrj2pfs80ko2pr8pv7h2gja16c9.apps.googleusercontent.com</string>
</resources>
